k3s_terraform_ansible_kubeflow_installation/genericdata_kube_docs/deployment/traefik-redirect-https-middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: kf-redirect-https
  namespace: istio-system
spec:
  redirectScheme:
    scheme: https
    permanent: true
