k3s_terraform_ansible_kubeflow_installation/genericdata_kube_docs/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ti-ingress
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: kf.nioyatechai.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: istio-ingressgateway
            port: 
              number: 80
