k3s_terraform_ansible_kubeflow_installation/genericdata_kube_docs/deployment/traefik-istio-ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ti-ingress
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: istio-system-kf-redirect-https@kubernetescrd
    # cert-manager.io/cluster-issuer: letsencrypt-staging
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: kf.nioyatechai.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: istio-ingressgateway
            port: 
              number: 80
  tls:
  - hosts:
    - kf.nioyatechai.com
    # secretName: kf-nioyatechai-com-tls-staging
    secretName: kf-nioyatechai-com-tls
